Salesforce/main/default/main/default/objects/Item_de_resumo_da_conta__c/Item_de_resumo_da_conta__c.object-meta.xml
<CustomObject>
    <label>Item de CRM</label>
    <nameField>
        <label>Nombre de Item de CRM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens de CRM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>