Salesforce/main/default/main/default/objects/Item_de_resumo_da_conta__c/fields/Obtentor__c.field-meta.xml
<CustomField>
    <fullName>Obtentor__c</fullName>
    <label>Obtentor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Obtentor</valueSetName>
    </valueSet>
</CustomField>