Salesforce/main/default/main/default/objects/Item_de_resumo_da_conta__c/fields/Porcentagem__c.field-meta.xml
<CustomField>
    <fullName>Porcentagem__c</fullName>
    <label>Porcentagem</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>