Salesforce/main/default/main/default/objects/Item_de_resumo_da_conta__c/fields/Resumo_da_conta__c.field-meta.xml
<CustomField>
    <fullName>Resumo_da_conta__c</fullName>
    <label>Resumo da conta</label>
    <referenceTo>Resumo_da_conta__c</referenceTo>
    <relationshipName>Itens_de_resumo_da_conta</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>